--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js.
+   <link rel="stylesheet" href="https://cdn.freecodecamp.org/testable-projects-fcc/v1/
+   bundle.js.">
+   <link rel="stylesheet" href="style.css">
     <title>Tribute Page</title>
 </head>
 <body>
     <main id="main">
-        <h1>hello world</h1>
+        <h1 id="title">Dr. Norman Borlaug</h1>
+        <span>The man who saved a billion lives</span>
+        <div id="img-div">
+            <img id="image" src="/tribute-page-main-image.jpg" alt="tribute-page-main-image" >
+            
+        </div>
     </main>
 </body>
 </html>
