--- a/Tribute_Page/index.html
+++ b/Tribute_Page/index.html
@@ -16,7 +16,7 @@
         <p>The man who saved a billion lives</p>
         <figure id="img-div">
 
-        <img id="image" src="/tribute-page-main-image.jpg" alt="tribute-page-main-image" >
+        <img id="image" src="./tribute-page-main-image.jpg" alt="tribute-page-main-image" >
 
         <figcaption id="img-caption">
             Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.
