--- a/Survey_Form/index.html
+++ b/Survey_Form/index.html
@@ -52,14 +52,20 @@
                     <fieldset>
                         <legend>Would you recommend freeCodeCamp to a friend?</legend>
 
+                        <div class="radio">
                         <input type="radio" name="radio1" id="radio1" class="input-radio" value="Definitely">
                         <label for="radio1">Definitely</label>
+                    </div>
 
+                        <div class="radio">
                         <input type="radio" name="radio1" id="radio1" class="input-radio" value="Maybe">
                         <label for="radio1">Maybe</label>
+                    </div>
 
+                        <div class="radio">                 
                         <input type="radio" name="radio1" id="radio1" class="input-radio" value="Not Sure">
                         <label for="radio1">Not Sure</label>
+                    </div>
                     </fieldset>
                     </div>
 
