--- a/Product_Landing_Page/index.html
+++ b/Product_Landing_Page/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/984d66d0c2.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Product Landing Page</title>
   </head>
@@ -22,9 +26,9 @@
 
           <nav id="nav-bar">
             <ul>
-              <li class="nav-link">Features</li>
-              <li class="nav-link">How It Works</li>
-              <li class="nav-link">Pricing</li>
+              <li><a href="#feature" class="nav-link">Features</a></li>
+              <li><a href="#how it works" class="nav-link">How It Works</a></li>
+              <li><a href="#pricing" class="nav-link">Pricing</a></li>
             </ul>
           </nav>
         </header>
@@ -44,10 +48,114 @@
                 pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
               />
 
-              <input type="button" id="submit" value="GET STARTED" />
+              <input
+                type="submit"
+                id="submit"
+                value="GET STARTED"
+                class="btn-submit"
+              />
             </form>
           </div>
         </section>
+
+        <div class="page-contents">
+          <section id="features">
+            <div class="grid">
+              <div class="icon">
+                <i class="fa-solid fa-fire-flame-curved"></i>
+              </div>
+              <div class="desc">
+                <h2>Premium Materials</h2>
+                <p>
+                  Our trombones use the shiniest brass which is sourced locally.
+                  This will increase the longevity of your purchase.
+                </p>
+              </div>
+            </div>
+            <div class="grid">
+              <div class="icon">
+                <i class="fa-solid fa-truck"></i>
+              </div>
+              <div class="desc">
+                <h2>Fast Shipping</h2>
+                <p>
+                  We make sure you recieve your trombone as soon as we have
+                  finished making it. We also provide free returns if you are
+                  not satisfied.
+                </p>
+              </div>
+            </div>
+            <div class="grid">
+              <div class="icon">
+                <i class="fa-solid fa-battery-full"></i>
+              </div>
+              <div class="desc">
+                <h2>Quality Assurance</h2>
+                <p>
+                  For every purchase you make, we will ensure there are no
+                  damages or faults and we will check and test the pitch of your
+                  instrument.
+                </p>
+              </div>
+            </div>
+          </section>
+
+          <section id="how it works">
+            <iframe
+              id="video"
+              height="315"
+              src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&controls=0&showinfo=0"
+              frameborder="0"
+            ></iframe>
+          </section>
+
+          <section id="pricing">
+            <div class="product" id="tenor">
+              <div class="level">Tenor trombone</div>
+              <h2>$600</h2>
+              <ol>
+                <li>Lorem ipsum.</li>
+                <li>Lorem ipsum.</li>
+                <li>Lorem ipsum dolor.</li>
+                <li>Lorem ipsum.</li>
+              </ol>
+              <button class="btn">Select</button>
+            </div>
+
+            <div class="product" id="bass">
+              <div class="level">Bass trombone</div>
+              <h2>$900</h2>
+              <ol>
+                <li>Lorem ipsum.</li>
+                <li>Lorem ipsum.</li>
+                <li>Lorem ipsum dolor.</li>
+                <li>Lorem ipsum.</li>
+              </ol>
+              <button class="btn">Select</button>
+            </div>
+
+            <div class="product" id="valve">
+              <div class="level">Value trombone</div>
+              <h2>$1200</h2>
+              <ol>
+                <li>Plays similar to a Trumpet</li>
+                <li>Great for Jazz Bands</li>
+                <li>Lorem ipsum dolor.</li>
+                <li>Lorem ipsum.</li>
+              </ol>
+              <button class="btn">Select</button>
+            </div>
+          </section>
+        </div>
+
+        <footer>
+          <ul>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <span>Copyright 2016, Original Trombones</span>
+        </footer>
       </div>
     </main>
   </body>
