--- a/Product_Landing_Page/index.html
+++ b/Product_Landing_Page/index.html
@@ -62,7 +62,7 @@
           <section id="features">
             <div class="grid">
               <div class="icon">
-                <i class="fa-solid fa-fire-flame-curved"></i>
+                <i class="fa fa-3x fa-fire-flame-curved"></i>
               </div>
               <div class="desc">
                 <h2>Premium Materials</h2>
@@ -74,7 +74,7 @@
             </div>
             <div class="grid">
               <div class="icon">
-                <i class="fa-solid fa-truck"></i>
+                <i class="fa fa-3x fa-truck"></i>
               </div>
               <div class="desc">
                 <h2>Fast Shipping</h2>
@@ -87,7 +87,7 @@
             </div>
             <div class="grid">
               <div class="icon">
-                <i class="fa-solid fa-battery-full"></i>
+                <i class="fa fa-3x fa-battery-full"></i>
               </div>
               <div class="desc">
                 <h2>Quality Assurance</h2>
