media Queries added

--- a/Product_Landing_Page/index.html
+++ b/Product_Landing_Page/index.html
@@ -26,8 +26,8 @@
 
           <nav id="nav-bar">
             <ul>
-              <li><a href="#feature" class="nav-link">Features</a></li>
-              <li><a href="#how it works" class="nav-link">How It Works</a></li>
+              <li><a href="#features" class="nav-link">Features</a></li>
+              <li><a href="#how-it-works" class="nav-link">How It Works</a></li>
               <li><a href="#pricing" class="nav-link">Pricing</a></li>
             </ul>
           </nav>
@@ -100,7 +100,7 @@
             </div>
           </section>
 
-          <section id="how it works">
+          <section id="how-it-works">
             <iframe
               id="video"
               height="315"
