--- a/Technical_documentation_page/index.html
+++ b/Technical_documentation_page/index.html
@@ -8,27 +8,27 @@
     <title>Technical Documentation Page</title>
   </head>
   <body>
-    <nav id="nav-bar">
-      <header>Js Documentation</header>
+    <nav id="navbar">
+      <header>JS Documentation</header>
       <ul>
-        <li><a href="#introduction">Introduction</a></li>
+        <li><a href="#introduction" class="nav-link">Introduction</a></li>
         <li>
-          <a href="#what_you_should_already_know"
+          <a class="nav-link" href="#what_you_should_already_know"
             >What you should already know</a
           >
         </li>
-        <li><a href="#javascript_and_java">JavaScript and Java</a></li>
-        <li><a href="#hellow_world">Hello world</a></li>
-        <li><a href="#variables">Variables</a></li>
-        <li><a href="#Declaring_variables">Declaring variables</a></li>
-        <li><a href="#variables_scope">Variables scope</a></li>
-        <li><a href="#Global_variables">Global variables</a></li>
-        <li><a href="#Constants">Constants</a></li>
-        <li><a href="#Data_types">Data types</a></li>
-        <li><a href="#if...else_statement">if...else statement</a></li>
-        <li><a href="#while_statement">while statement</a></li>
-        <li><a href="#Function_declarations">Declaring variables</a></li>
-        <li><a href="#Reference">Reference</a></li>
+        <li><a class="nav-link" href="#javascript_&_java">JavaScript and Java</a></li>
+        <li><a class="nav-link" href="#Hello_world">Hello world</a></li>
+        <li><a class="nav-link" href="#variables">Variables</a></li>
+        <li><a  class="nav-link"href="#Declaring_variables">Declaring variables</a></li>
+        <li><a class="nav-link" href="#variables_scope">Variables scope</a></li>
+        <li><a class="nav-link" href="#Global_variables">Global variables</a></li>
+        <li><a class="nav-link" href="#Constants">Constants</a></li>
+        <li><a class="nav-link" href="#Data_types">Data types</a></li>
+        <li><a class="nav-link" href="#if...else_statement">if...else statement</a></li>
+        <li><a class="nav-link" href="#while_statement">while statement</a></li>
+        <li><a class="nav-link" href="#Function_declarations">Declaring variables</a></li>
+        <li><a class="nav-link" href="#Reference">Reference</a></li>
       </ul>
     </nav>
 
@@ -91,7 +91,7 @@
         </article>
       </section>
 
-      <section class="main-section" id="javasrcipt_and_java">
+      <section class="main-section" id="javascript_&_java">
         <header>JavaScript and java</header>
         <article>
           <p>
@@ -196,7 +196,7 @@
         </article>
       </section>
 
-      <section class="main-section" id="variable_scope">
+      <section class="main-section" id="variables_scope">
         <header>Variable scope</header>
         <article>
           <p>
@@ -230,7 +230,7 @@
         </article>
       </section>
 
-      <section class="main-section" id="Global_ variables">
+      <section class="main-section" id="Global_variables">
         <header>Global variables</header>
 
         <article>
